# ni-run

0-intro/: Makefile
0-intro/src/: fibonacci.fml  roman-numerals.fml  stack.fml  triangle.fml
1-ast-interpreter/: Cargo.toml  fml  fml-ast-interpreter.code-workspace
1-ast-interpreter/src/: lib.rs
1-ast-interpreter/src/ast/: mod.rs
1-ast-interpreter/src/fml-programs/: functions.fml  three.fml
2-bc-interpreter/: Cargo.toml  fml  fml-bc-interpreter.code-workspace
2-bc-interpreter/src/: lib.rs
2-bc-interpreter/src/bc/: mod.rs
2-bc-interpreter/src/fml-programs/: error.fml
3-bc-compiler/: Cargo.toml  fml  fml-bc-compiler.code-workspace
3-bc-compiler/src/: lib.rs
3-bc-compiler/src/bc/: mod.rs
3-bc-compiler/src/state/: mod.rs
4-gc/: Cargo.toml
4-gc/src/: lib.rs
4-gc/src/heap/: gc.rs  mod.rs
4-gc/src/util/: mod.rs
5-jit/: Cargo.toml  build  fml  fml-jit.code-workspace
5-jit/src/: lib.rs
5-jit/src/bc/: mod.rs
5-jit/src/fml-programs/: infinite.fml
5-jit/src/heap/: gc.rs
5-jit/src/interpreter/: mod.rs
5-jit/src/jit/: mod.rs
