[package]
name = "fml-bc-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
tailcall = "0.1.6"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[profile.release]
debug = true
