[package]
name = "fml-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
assembler = "0.10.1"
clap = { version = "3.1.17", features = ["derive"] }
itertools = "0.10.3"
libc = "0.2.126"
mmap-fixed = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
smallvec = "1.8.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[profile.release]
opt-level = 3
debug = true
